--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
 <app-navbar></app-navbar>
 <app-sidebar></app-sidebar>
+<div class="content-wrapper">
+  <div class="container-fluid">
+    <router-outlet></router-outlet>
+  </div>
+</div>
