--- a/src/app/team/list-team/list-team.component.html
+++ b/src/app/team/list-team/list-team.component.html
@@ -12,6 +12,7 @@
             <tr>
               <th>Logo</th>
               <th>Team</th>
+              <th></th>
             </tr>
             </thead>
             <tbody>
@@ -19,6 +20,7 @@
               <tr>
                 <td><img [src]="team.logo" [alt]="team.code" width="100" height="100"></td>
                 <td>{{team.name}}</td>
+                <td><a [routerLink]="[team.team_id]">Details</a></td>
               </tr>
             </ng-container>
             </tbody>
