--- a/src/app/team/team-detail/team-detail.component.html
+++ b/src/app/team/team-detail/team-detail.component.html
@@ -5,13 +5,20 @@
         <div class="card-header">
           <h3 class="card-title">
             <span>
-              <img [src]="currentTeam.logo" [alt]="currentTeam.code" width="100" height="100">
-              {{currentTeam.name}}
+              <img [src]="currentTeam?.logo" [alt]="currentTeam?.code" width="100" height="100"
+                   style="margin-right: 30px">
+              {{currentTeam?.name}}
             </span>
           </h3>
         </div>
         <!-- /.card-header -->
         <div class="card-body">
+          <div class="progress progress-sm active">
+            <div class="progress-bar bg-success progress-bar-striped" role="progressbar"
+                 aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" [style.width]="loading+'%'">
+              <span class="sr-only">{{loading}}% Complete</span>
+            </div>
+          </div>
           <table id="statistics" class="table table-bordered table-hover">
             <thead>
             <tr>
