--- a/src/app/team/team-detail/team-detail.component.html
+++ b/src/app/team/team-detail/team-detail.component.html
@@ -141,7 +141,7 @@
                   </span>
                 </td>
                 <td>
-                  <a routerLink="">
+                  <a routerLink="/h2h/{{fixture.homeTeam.team_id}}/{{fixture.awayTeam.team_id}}">
                     H2H
                   </a>
                 </td>
