--- a/src/app/h2h/h2h/h2h.component.html
+++ b/src/app/h2h/h2h/h2h.component.html
@@ -25,7 +25,7 @@
                   </span>
               </td>
               <td style="text-align: center">
-                <a routerLink="">
+                <a routerLink="/fixture/{{fixture.fixture_id}}">
                   {{fixture.score.fulltime}}
                 </a>
               </td>
@@ -36,7 +36,7 @@
                   </span>
               </td>
               <td>
-                <a routerLink="">
+                <a routerLink="/fixture/{{fixture.fixture_id}}">
                   Statistics
                 </a>
               </td>
