add new sidebar

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -5,66 +5,381 @@
   </a>
 
   <!--   Sidebar-->
-  <div class="sidebar" style="height: 700px">
+  <div class="sidebar">
 
     <!-- Sidebar Menu -->
     <nav class="mt-2">
       <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-        <li class="nav-item">
-          <a routerLink="/league/2790" class="nav-link">
+        <li class="nav-item has-treeview">
+          <a href="#" class="nav-link">
             <i class="nav-icon fas fa-list"></i>
             <p>
               Premier League
+              <i class="right fas fa-angle-left"></i>
             </p>
           </a>
+          <ul class="nav nav-treeview">
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Total Shots</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Shot On Goals</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Corner Kicks</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Offsides</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Goal Keeper Saves</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Fouls</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Yellow Cards</p>
+              </a>
+            </li>
+          </ul>
         </li>
-        <li class="nav-item">
-          <a routerLink="/league/2755" class="nav-link">
+        <li class="nav-item has-treeview">
+          <a href="#" class="nav-link">
             <i class="nav-icon fas fa-list"></i>
             <p>
               Bundesliga
+              <i class="right fas fa-angle-left"></i>
             </p>
           </a>
+          <ul class="nav nav-treeview">
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Total Shots</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Shot On Goals</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Corner Kicks</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Offsides</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Goal Keeper Saves</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Fouls</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Yellow Cards</p>
+              </a>
+            </li>
+          </ul>
         </li>
-        <li class="nav-item">
-          <a routerLink="/league/2664" class="nav-link">
+        <li class="nav-item has-treeview">
+          <a href="#" class="nav-link">
             <i class="nav-icon fas fa-list"></i>
             <p>
               Ligue 1
+              <i class="right fas fa-angle-left"></i>
             </p>
           </a>
+          <ul class="nav nav-treeview">
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Total Shots</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Shot On Goals</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Corner Kicks</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Offsides</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Goal Keeper Saves</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Fouls</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Yellow Cards</p>
+              </a>
+            </li>
+          </ul>
         </li>
-        <li class="nav-item">
-          <a routerLink="/league/2833" class="nav-link">
+        <li class="nav-item has-treeview">
+          <a href="#" class="nav-link">
             <i class="nav-icon fas fa-list"></i>
             <p>
               LaLiga
+              <i class="right fas fa-angle-left"></i>
             </p>
           </a>
+          <ul class="nav nav-treeview">
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Total Shots</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Shot On Goals</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Corner Kicks</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Offsides</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Goal Keeper Saves</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Fouls</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Yellow Cards</p>
+              </a>
+            </li>
+          </ul>
         </li>
-        <li class="nav-item">
-          <a routerLink="/league/2826" class="nav-link">
+        <li class="nav-item has-treeview">
+          <a href="#" class="nav-link">
             <i class="nav-icon fas fa-list"></i>
             <p>
               Primeira Liga
+              <i class="right fas fa-angle-left"></i>
             </p>
           </a>
+          <ul class="nav nav-treeview">
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Total Shots</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Shot On Goals</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Corner Kicks</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Offsides</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Goal Keeper Saves</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Fouls</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Yellow Cards</p>
+              </a>
+            </li>
+          </ul>
         </li>
-        <li class="nav-item">
-          <a routerLink="/league/2857" class="nav-link">
+        <li class="nav-item has-treeview">
+          <a href="#" class="nav-link">
             <i class="nav-icon fas fa-list"></i>
             <p>
               Serie A
+              <i class="right fas fa-angle-left"></i>
             </p>
           </a>
+          <ul class="nav nav-treeview">
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Total Shots</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Shot On Goals</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Corner Kicks</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Offsides</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Goal Keeper Saves</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Fouls</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Yellow Cards</p>
+              </a>
+            </li>
+          </ul>
         </li>
-        <li class="nav-item">
-          <a routerLink="/league/2679" class="nav-link">
+        <li class="nav-item has-treeview">
+          <a href="#" class="nav-link">
             <i class="nav-icon fas fa-list"></i>
             <p>
               Russian Premier League
+              <i class="right fas fa-angle-left"></i>
             </p>
           </a>
+          <ul class="nav nav-treeview">
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Total Shots</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Shot On Goals</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Corner Kicks</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Offsides</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Goal Keeper Saves</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Fouls</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Yellow Cards</p>
+              </a>
+            </li>
+          </ul>
         </li>
       </ul>
     </nav>
