--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -20,7 +20,7 @@
           </a>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2790/total-shots" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Total Shots</p>
               </a>
