--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -20,43 +20,43 @@
           </a>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a routerLink="/standing/2790/total-shots" class="nav-link">
+              <a routerLink="/standing/2790/Total Shots" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Total Shots</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2790/Shots on Goal" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Shot On Goals</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2790/Corner Kicks" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Corner Kicks</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2790/Offsides" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Offsides</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2790/Goalkeeper Saves" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Goal Keeper Saves</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2790/Fouls" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Fouls</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2790/Yellow Cards" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Yellow Cards</p>
               </a>
@@ -73,43 +73,43 @@
           </a>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2755/Total Shots" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Total Shots</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2755/Shots on Goal" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Shot On Goals</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2755/Corner Kicks" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Corner Kicks</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2755/Offsides" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Offsides</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2755/Goalkeeper Saves" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Goal Keeper Saves</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2755/Fouls" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Fouls</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2755/Yellow Cards" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Yellow Cards</p>
               </a>
@@ -126,43 +126,43 @@
           </a>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2664/Total Shots" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Total Shots</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2664/Shots on Goal" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Shot On Goals</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2664/Corner Kicks" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Corner Kicks</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2664/Offsides" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Offsides</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2664/Goalkeeper Saves" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Goal Keeper Saves</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2664/Fouls" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Fouls</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2664/Yellow Cards" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Yellow Cards</p>
               </a>
@@ -179,43 +179,43 @@
           </a>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2833/Total Shots" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Total Shots</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2833/Shots on Goal" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Shot On Goals</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2833/Corner Kicks" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Corner Kicks</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2833/Offsides" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Offsides</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2833/Goalkeeper Saves" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Goal Keeper Saves</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2833/Fouls" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Fouls</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2833/Yellow Cards" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Yellow Cards</p>
               </a>
@@ -232,43 +232,43 @@
           </a>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2826/Total Shots" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Total Shots</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2826/Shots on Goal" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Shot On Goals</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2826/Corner Kicks" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Corner Kicks</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2826/Offsides" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Offsides</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2826/Goalkeeper Saves" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Goal Keeper Saves</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2826/Fouls" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Fouls</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2826/Yellow Cards" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Yellow Cards</p>
               </a>
@@ -285,43 +285,43 @@
           </a>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2857/Total Shots" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Total Shots</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2857/Shots on Goal" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Shot On Goals</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2857/Corner Kicks" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Corner Kicks</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2857/Offsides" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Offsides</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2857/Goalkeeper Saves" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Goal Keeper Saves</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2857/Fouls" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Fouls</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2857/Yellow Cards" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Yellow Cards</p>
               </a>
@@ -338,43 +338,43 @@
           </a>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2679/Total Shots" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Total Shots</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2679/Shots on Goal" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Shot On Goals</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2679/Corner Kicks" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Corner Kicks</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2679/Offsides" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Offsides</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2679/Goalkeeper Saves" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Goal Keeper Saves</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2679/Fouls" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Fouls</p>
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="" class="nav-link">
+              <a routerLink="/standing/2679/Yellow Cards" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Yellow Cards</p>
               </a>
