--- a/src/app/standing/standing/standing.component.html
+++ b/src/app/standing/standing/standing.component.html
@@ -7,6 +7,12 @@
         </div>
         <!-- /.card-header -->
         <div class="card-body">
+          <div class="progress progress-sm active">
+            <div class="progress-bar bg-success progress-bar-striped" role="progressbar"
+                 aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" [style.width]="loading+'%'">
+              <span class="sr-only">{{loading}}% Complete</span>
+            </div>
+          </div>
           <table id="standing" class="table table-bordered table-hover">
             <thead>
             <tr>
