--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -20,45 +20,9 @@
           </a>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a routerLink="/standing/2790/Total Shots" class="nav-link">
+              <a routerLink="/standing/2790" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Total Shots</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2790/Shots on Goal" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Shot On Goals</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2790/Corner Kicks" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Corner Kicks</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2790/Offsides" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Offsides</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2790/Goalkeeper Saves" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Goal Keeper Saves</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2790/Fouls" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Fouls</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2790/Yellow Cards" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Yellow Cards</p>
               </a>
             </li>
           </ul>
@@ -73,45 +37,9 @@
           </a>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a routerLink="/standing/2755/Total Shots" class="nav-link">
+              <a routerLink="/standing/2755" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Total Shots</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2755/Shots on Goal" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Shot On Goals</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2755/Corner Kicks" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Corner Kicks</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2755/Offsides" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Offsides</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2755/Goalkeeper Saves" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Goal Keeper Saves</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2755/Fouls" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Fouls</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2755/Yellow Cards" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Yellow Cards</p>
               </a>
             </li>
           </ul>
@@ -126,45 +54,9 @@
           </a>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a routerLink="/standing/2664/Total Shots" class="nav-link">
+              <a routerLink="/standing/2664" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Total Shots</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2664/Shots on Goal" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Shot On Goals</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2664/Corner Kicks" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Corner Kicks</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2664/Offsides" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Offsides</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2664/Goalkeeper Saves" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Goal Keeper Saves</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2664/Fouls" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Fouls</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2664/Yellow Cards" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Yellow Cards</p>
               </a>
             </li>
           </ul>
@@ -179,45 +71,9 @@
           </a>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a routerLink="/standing/2833/Total Shots" class="nav-link">
+              <a routerLink="/standing/2833" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Total Shots</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2833/Shots on Goal" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Shot On Goals</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2833/Corner Kicks" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Corner Kicks</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2833/Offsides" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Offsides</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2833/Goalkeeper Saves" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Goal Keeper Saves</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2833/Fouls" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Fouls</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2833/Yellow Cards" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Yellow Cards</p>
               </a>
             </li>
           </ul>
@@ -232,45 +88,9 @@
           </a>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a routerLink="/standing/2826/Total Shots" class="nav-link">
+              <a routerLink="/standing/2826" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Total Shots</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2826/Shots on Goal" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Shot On Goals</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2826/Corner Kicks" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Corner Kicks</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2826/Offsides" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Offsides</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2826/Goalkeeper Saves" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Goal Keeper Saves</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2826/Fouls" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Fouls</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2826/Yellow Cards" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Yellow Cards</p>
               </a>
             </li>
           </ul>
@@ -285,45 +105,9 @@
           </a>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a routerLink="/standing/2857/Total Shots" class="nav-link">
+              <a routerLink="/standing/2857" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Total Shots</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2857/Shots on Goal" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Shot On Goals</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2857/Corner Kicks" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Corner Kicks</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2857/Offsides" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Offsides</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2857/Goalkeeper Saves" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Goal Keeper Saves</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2857/Fouls" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Fouls</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2857/Yellow Cards" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Yellow Cards</p>
               </a>
             </li>
           </ul>
@@ -338,45 +122,9 @@
           </a>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a routerLink="/standing/2679/Total Shots" class="nav-link">
+              <a routerLink="/standing/2679" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Total Shots</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2679/Shots on Goal" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Shot On Goals</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2679/Corner Kicks" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Corner Kicks</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2679/Offsides" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Offsides</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2679/Goalkeeper Saves" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Goal Keeper Saves</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2679/Fouls" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Fouls</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a routerLink="/standing/2679/Yellow Cards" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Yellow Cards</p>
               </a>
             </li>
           </ul>
