--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -20,7 +20,7 @@
           </a>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a routerLink="/standing/2790" class="nav-link">
+              <a href="/standing/2790" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Total Shots</p>
               </a>
@@ -37,7 +37,7 @@
           </a>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a routerLink="/standing/2755" class="nav-link">
+              <a href="/standing/2755" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Total Shots</p>
               </a>
@@ -54,7 +54,7 @@
           </a>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a routerLink="/standing/2664" class="nav-link">
+              <a href="/standing/2664" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Total Shots</p>
               </a>
@@ -71,7 +71,7 @@
           </a>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a routerLink="/standing/2833" class="nav-link">
+              <a href="/standing/2833" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Total Shots</p>
               </a>
@@ -88,7 +88,7 @@
           </a>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a routerLink="/standing/2826" class="nav-link">
+              <a href="/standing/2826" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Total Shots</p>
               </a>
@@ -105,7 +105,7 @@
           </a>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a routerLink="/standing/2857" class="nav-link">
+              <a href="/standing/2857" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Total Shots</p>
               </a>
@@ -122,7 +122,7 @@
           </a>
           <ul class="nav nav-treeview">
             <li class="nav-item">
-              <a routerLink="/standing/2679" class="nav-link">
+              <a href="/standing/2679" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Total Shots</p>
               </a>
